--- a/konkatu-app/views/login.ejs
+++ b/konkatu-app/views/login.ejs
@@ -7,10 +7,10 @@
         </style>
     </head>
     <body>
-        <h1>ログイン</h1>
-        <p>婚活アプリを利用するにはログインが必要です</p>
+        <h1 style="text-align:center">ログイン</h1>
+        <p style="text-align:center">婚活アプリを利用するにはログインが必要です</p>
         
-        <div>
+        <div style="text-align:center">
             <input type="submit" value="login">
         </div>
     </body>
